# danniao

./: .gitignore  pyproject.toml  requirements.txt
.cursor/: hooks.json
.cursor/hooks/: ssh_wrapper.cmd  sync_to_remote.py
danniao/: __init__.py  __main__.py
danniao-chronicles/: danniao-chronicles.html
danniao-chronicles/assets/: charts.js
danniao/actions/: __init__.py  evidence.py  knowledge_ingestion.py  search_provider.py  world_interface.py
danniao/expression/: __init__.py  expression.py  ollama_expression.py
danniao/hippocampus/: __init__.py  chroma_store.py  concept_extractor.py  dynamics.py  embeddings.py  episodic_log.py  features.py  gate.py  ollama_embedding.py  repl.py  spreading.py  tree.py  vector_hash.py  vector_space.py  (+1 more)
docs/: 00-architecture.md  00-master-spec.md  01-hippocampus-cognitive-tree.md  01-基础架构与数据沉淀规范.docx  02-multimodal-embedding-hippocampus.md  02-动力学引擎与权重演化算法.docx  03-内稳态系统与好奇心驱动.docx  04-环境交互与任务交付接口.docx  1. 认知树的“渐进式生长”机制.docx  README.md  autonomous-evolution-phased-plan.md  丹鸟 (DanNiao) 创世指南：系统设计理念与造物主期望.docx  丹鸟 (DanNiao) 核心架构与工程实施总规范.docx  类脑个体化数字生命演化系统设计方案.docx  类脑个体化数字生命演化系统设计方案_edited.docx  ️ Step 1：构建海马体（数据底座）.docx
tasks/: lessons.md  todo.md
tests/: conftest.py  test_cognitive_tree_acceptance.py  test_continuous_mind.py  test_evidence.py  test_exploration.py  test_expression.py  test_homeostasis.py  test_knowledge_ingestion.py  test_ollama_integration.py  test_reward.py  test_search_provider.py  test_spreading.py  test_step6_integration.py  test_vector_hippocampus.py  test_vector_node.py  test_world_interface.py
(+5 files in other folders)
