[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "danniao"
version = "0.4.1"
description = "DanNiao — 类脑数字生命体"
readme = "docs/README.md"
requires-python = ">=3.10"
dependencies = [
  "networkx>=3.1",
  "numpy>=1.24.0",
  "requests>=2.28.0",
  "chromadb>=0.4.0",
  "sentence-transformers>=2.2.0",
]

[project.scripts]
danniao = "danniao.__main__:main"

[tool.setuptools]
packages = ["danniao"]

